# parser-playground

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SIMD-NOTES.md  conanfile.txt  main.cpp
include/: types.h  util.h  varuint.h
src/: bench_varuint.cpp  main.cpp  test_util.cpp  test_varuint.cpp  util.cpp  varuint.cpp
